--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
