--- a/src/components/aboutUS/sideNav/SideNavbar.css
+++ b/src/components/aboutUS/sideNav/SideNavbar.css
@@ -3,7 +3,7 @@ nav {
   display: flex;
   flex-direction: row-reverse;
   transform: rotate(-90deg) translate3d(-50%,0,0);
-  top: 40%;
+  top: 30%;
   left: -7.5rem;
 }
 nav a {
@@ -23,4 +23,12 @@ nav a.active {
   background: rgba(6, 12, 34, 0.18);
   padding-right: 4px;
   padding-left:4px;
+}
+
+
+@media screen and (max-width: 600px) {
+  nav {
+    left: -9.5rem;
+  }
+
 }
