--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 .headerSearch {
   border-radius: 10px;
